ecmascript/parser/tests/typescript-errors/tsc/async/es5/functionDeclarations/asyncFunctionDeclaration12_es5/input.ts.stderr
error: Expected (, got await
 --> $DIR/tests/typescript-errors/tsc/async/es5/functionDeclarations/asyncFunctionDeclaration12_es5/input.ts:4:24
  |
4 | var v = async function await(): Promise<void> { }
  |                        ^^^^^

